Backend: Use PUT to update assigntments
